--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,7 @@ dependencies:
            ros config set default.lisp ccl-bin ;;
       esac
     - ros run -- --version
+    - apt-get install libuv
   override:
     - git clone https://github.com/fukamachi/cl-coveralls ~/lisp/cl-coveralls
     - git clone https://github.com/fukamachi/prove ~/lisp/prove
