--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,7 @@ machine:
 
 dependencies:
   pre:
+    - sudo apt-get update; sudo apt-get install libuv
     - curl -L https://raw.githubusercontent.com/snmsts/roswell/release/scripts/install-for-ci.sh | sh
     - case $CIRCLE_NODE_INDEX in
         0) ros config set default.lisp sbcl-bin ;;
@@ -11,7 +12,6 @@ dependencies:
            ros config set default.lisp ccl-bin ;;
       esac
     - ros run -- --version
-    - apt-get install libuv
   override:
     - git clone https://github.com/fukamachi/cl-coveralls ~/lisp/cl-coveralls
     - git clone https://github.com/fukamachi/prove ~/lisp/prove
